syntax = "proto3";

option go_package = "github.com/samverrall/go-task-application/user-service/internal/adapters/left/grpc/gen";

message GetUserEmailRequest {
  string user_uuid = 1;
}

message GetUserEmailResponse {
  string email = 1;
}

service User {
  rpc GetUserEmail(GetUserEmailRequest) returns (GetUserEmailResponse){}
}
